fix: swagger docs and move user creation route to auth
