# backend/src/routes/auth.route.ts
@@ -1,6 +1,8 @@
 import { Hono } from "hono";
 import { loginController } from "../controllers/auth/login.controller.ts";
+import { registerController } from "../controllers/auth/register.controller.ts";
 
 export const authRoutes = new Hono();
 
 authRoutes.post("/login", loginController);
+authRoutes.post("/register", registerController);
